# esp32-ld2450-zigbee

./: .gitignore  CHANGELOG.md  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
.github/workflows/: release-on-tag.yml
components/ld2450/: CMakeLists.txt  ld2450.c  ld2450_cmd.c  ld2450_zone.c  ld2450_zone_csv.c
components/ld2450/include/: ld2450.h  ld2450_zone.h  ld2450_zone_csv.h
components/ld2450/test/: Makefile  Makefile.csv  test_ld2450_zone.c  test_ld2450_zone_csv.c
docs/: coordinator-fallback.md
examples/home-assistant/: README.md  plotly-card.yaml  zone-dashboard.yaml
ha/blueprints/: ld2450_fallback_watchdog.yaml
main/: CMakeLists.txt  board_led.h  coordinator_fallback.c  coordinator_fallback.h  crash_diag.c  crash_diag.h  idf_component.yml  ld2450_cli.c  ld2450_zb_h2.c  main.cpp  nvs_config.c  nvs_config.h  ota_check.c  ota_check.h  sensor_bridge.c  version.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  zigbee_attr_handler.c  zigbee_defs.h  zigbee_init.c  zigbee_init.h  zigbee_signal_handlers.c  zigbee_signal_handlers.h
web/: app.js  index.html  style.css
z2m/: ld2450_zb_h2.js  ld2450_zb_h2.mjs  ld2450_zb_h2_dev.js  ota_index.json
